[package]
authors = ["Robin Kruppe <robin.kruppe@gmail.com>"]
name = "suptracer"
version = "0.0.0"

[dependencies]
arrayvec = { version = "0.3.16", features = ["use_union"] }
bmp = "0.1.4"
cast = "0.1.0"
cgmath = "0.12.0"
clap = "2.14.0"
itertools = "0.5.1"
lazy_static = "0.2.1"
obj-rs = "0.4.15"
rayon = "0.4.0"
regex = "0.1.77"
scoped_threadpool = "0.1.7"
stopwatch = "0.0.7"
beebox = "0.1.1"
beevage = { path = "../beevage" }
watertri = { path = "../watertri" }

[profile.release]
lto = true
panic = "abort"
