[package]
authors = ["Robin Kruppe <robin.kruppe@gmail.com>"]
name = "suptracer"
version = "0.0.0"

[dependencies]
beebox = "0.1.1"
bmp = "0.1.4"
cast = "0.1.0"
cgmath = "0.12.0"
clap = "2.14.0"
lazy_static = "0.2.1"
obj-rs = "0.4.15"
rayon = "0.6.0"
regex = "0.1.77"

[dependencies.arrayvec]
features = ["use_union"]
version = "0.3.16"

[dependencies.beevage]
path = "../beevage"

[dependencies.watertri]
path = "../watertri"

[profile.release]
lto = true
panic = "abort"
